# HarmonyXFlowBench

CollectedAbcFiles/native_array_get/: modules.abc
CollectedAbcFiles/native_call_function_proxy/: modules.abc
CollectedAbcFiles/native_call_function_sink/: modules.abc
CollectedAbcFiles/native_error/: modules.abc
CollectedAbcFiles/native_multiple_libraries/: modules.abc
CollectedAbcFiles/native_phi_branch/: modules.abc
CollectedAbcFiles/native_proxy/: modules.abc
CollectedAbcFiles/native_proxy_copy/: modules.abc
CollectedAbcFiles/native_source/: modules.abc
HapFiles/native_array_get/: entry-default.hap
HapFiles/native_array_set/: entry-default.hap
HapFiles/native_call_function_object/: entry-default.hap
HapFiles/native_call_function_proxy/: entry-default.hap
HapFiles/native_call_function_sink/: entry-default.hap
HapFiles/native_call_function_source/: entry-default.hap
HapFiles/native_complex_data/: entry-default.hap
HapFiles/native_delegation/: entry-default.hap
HapFiles/native_error/: entry-default.hap
HapFiles/native_leak/: entry-default.hap
HapFiles/native_multiple_interaction/: entry-default.hap
HapFiles/native_multiple_libraries/: entry-default.hap
HapFiles/native_phi_branch/: entry-default.hap
HapFiles/native_phi_concat/: entry-default.hap
native_multiple_libraries/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  napi_init_dynamic.cpp  napi_init_leak.cpp
native_multiple_libraries/entry/src/main/cpp/types/libdynamic/: oh-package.json5
native_multiple_libraries/entry/src/main/cpp/types/libleak/: oh-package.json5
(+214 files in other folders)
